--- a/Ecu911/Pages/ChangePassword.razor
+++ b/Ecu911/Pages/ChangePassword.razor
@@ -78,7 +78,7 @@
 
     private async Task changePassword()
     {
-        var userId = await sessionStorage.GetItemAsync<string>("Id-Usuario");
+        var userId = await sessionStorage.GetItemAsync<string>("Id");
 
         request.NewPassword = confirmedPassword;
         request.UserId = userId;
@@ -87,12 +87,18 @@
         {
             response.EnsureSuccessStatusCode();
             request.OldPassword = "";
-            snackBar.Add("Contraseña cambiada exitosamente", MudBlazor.Severity.Success);
+            snackBar.Add("Contraseña cambiada exitosamente Vuleve a ingresar", MudBlazor.Severity.Info);
+            LogOut();
         }
         catch (HttpRequestException)
         {
             var data = await response.Content.ReadFromJsonAsync<ResponseModel>();
             snackBar.Add($"{data.Message}", MudBlazor.Severity.Error);
         }
+    }
+
+    public void LogOut()
+    {
+        ((CustomAuthenticationStateProvider)authProvider).SetUserAsAuLoggedOut();
     }
 }
