--- a/Ecu911/Pages/RestablecerUsuarioSuper.razor
+++ b/Ecu911/Pages/RestablecerUsuarioSuper.razor
@@ -16,7 +16,7 @@
 
 </MudGrid>
 <MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
-    <MudButton OnClick="restablecerUsuario" Variant="Variant.Filled" StartIcon=@Icons.Rounded.Password Color="Color.Success" Size="Size.Large">
+    <MudButton OnClick="restablecerUsuario" Variant="Variant.Filled" StartIcon=@Icons.Rounded.Password Color="Color.Info" Size="Size.Large">
         <MudText>Restablecer Contraseña</MudText>
     </MudButton>
 
