--- a/Ecu911/_Imports.razor
+++ b/Ecu911/_Imports.razor
@@ -35,7 +35,7 @@
 @inject ApiService apiService
 @inject AuthenticationStateProvider authProvider
 @inject NavigationManager navManager
-
+@inject IDialogService DialogService 
 @inject Blazored.LocalStorage.ILocalStorageService sessionStorage
 
 
