--- a/Ecu911/Pages/AlertasProceso.razor
+++ b/Ecu911/Pages/AlertasProceso.razor
@@ -5,15 +5,21 @@
 
     <MudText Typo="Typo.h3" GutterBottom="true">Alertas Proceso</MudText>
     <MudText Class="mb-12">alertas encontradas</MudText>
-    <MudItem xs="12" sm="12" md="12" Class="d-flex  flex-column  align-center" >
+    <MudItem xs="12" Class="d-flex  flex-column  align-center" >
     <MudGrid>
             <MudSimpleTable Hover="true" Dense="true" >
+                <thead>
+                    <tr>
+                        <th>Descripción </th>
+                     
+                    </tr>
+                </thead>
             <tbody>
                 @foreach (var item in alertas)
                 {
                     <tr>
-                        <td >@item.descripcionAlerta</td>
 
+                        <td >@item.descripcionAlerta</td>
                     </tr>
                 }
             </tbody>
@@ -89,11 +95,11 @@
 
         HttpResponseMessage? response = new();
 
-       
+
         try
         {
             response = await apiService.HttpClient.PostAsJsonAsync("Alerta", alerta);
-           
+
         }
         catch (HttpRequestException)
         {
@@ -104,7 +110,8 @@
         {
             response.EnsureSuccessStatusCode();
             var data = await response.Content.ReadFromJsonAsync<CreatedResponse>();
-            snackBar.Add("Alerta agregada!", Severity.Success);
+            snackBar.Add("Alerta agregada!", Severity.Info);
+            NavigateInicio();
 
         }
         catch (HttpRequestException)
