--- a/Ecu911/Pages/EtapaContractual.razor
+++ b/Ecu911/Pages/EtapaContractual.razor
@@ -1,7 +1,7 @@
 ﻿@page "/etapacontractual"
 @page "/etapacontractual/{id}"
 
-
+@attribute [Authorize(Roles = "SUPERADMINISTRADOR,USUARIO")]
 
 <PageTitle>Etapa Contractual</PageTitle>
 <MudText Align="Align.Center" Typo="Typo.h3">Etapa Contractual</MudText>
@@ -40,6 +40,7 @@
         <MudText Typo="Typo.h6" Class="d-flex flex-column align-center" Style="width: 100%; height:100%;">ecu911.gob.ec</MudText>
     </MudItem>
 </MudPaper>
+
 @code {
     private ProcesoCompra updateproceso = new();
     private Contractual registro = new();
@@ -68,7 +69,8 @@
         {
             response.EnsureSuccessStatusCode();
             var data = await response.Content.ReadFromJsonAsync<CreatedResponse>();
-            snackBar.Add("Etapa  actualizada!", Severity.Success);
+            snackBar.Add("Etapa  actualizada!", Severity.Info);
+            NavigateEstados();
 
         }
         catch (HttpRequestException)
